opam-version: "2.0"
synopsis: "Tiny batteries"
maintainer: "Ian Zimmerman <itz@no-use.mooo.com>"
authors: "Ian Zimmerman <itz@no-use.mooo.com>"
license: "ZPL-2.1"
bug-reports: "itz@no-use.mooo.com"
depends: [
  "ocaml" {>= "4.07"}
  "ocamlfind"
  "qcheck-core" {>= "0.9"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
url {
  src: "git+file:///home/itz/git/aaa#master"
}
name: "aaa"
version: "0.5.7~dev"
