(library
 (name Aaa)
 (public_name aaa.Aaa)
 (synopsis "Tiny batteries")
 (modules (:standard \ RunTests))
 (flags (-principal)))

(executable
 (name RunTests)
 (modules RunTests)
 (flags (-open Aaa))
 (libraries Aaa qcheck-core qcheck-core.runner))

(alias
 (name runtest)
 (action (system ./RunTests.sh))
 (deps
  (file RunTests.sh)
  (file RunTests.bc)))

(alias
 (name default)
 (deps
  (file Aaa.cma)
  (file Aaa.cmxa)
  (file aaa.install)
  (file aaa.opam)))
